styles.css
/* ... */
body.clean-breadcrumbs .cu-task-row-main__parent-name {
    display: flex;
    flex-grow: 1;
    border-left: 1px solid rgba(52,52,52,.4);
    padding-left: 5px;
    padding-top: 2px;
    margin-top: 4px;
}
body.clean-breadcrumbs.dark-theme .cu-task-row-main__parent-name {
    border-left-color: rgba(130,133,136,.4);
}
body.clean-breadcrumbs .cu-task-row-breadcrumbs ul {
    display: inline-block;
}
body.clean-breadcrumbs .cu-task-row-main .cu-task-row-breadcrumbs ul a {
    color: var(--theme-main-color-light);
    font-size: 90%;
}
body.clean-breadcrumbs .cu-task-row-main .cu-task-row-breadcrumbs ul > li:first-child a {
    color: var(--theme-main-color);
}
body.clean-breadcrumbs.dark-theme .cu-task-row-main .cu-task-row-breadcrumbs ul a {
    color: var(--theme-main-color);
}
body.clean-breadcrumbs.dark-theme .cu-task-row-main .cu-task-row-breadcrumbs ul > li:first-child a {
    color: var(--theme-main-color-light);
}

/* Better visibility in status labels */
body.visible-status cu-task-list .cu-dashboard-table__header-status {
    border-bottom: 1px transparent;
    background-image: linear-gradient(rgba(128,128,128, 0.35) 0%, rgba(128,128,128, 0) 90%) !important;
    background-blend-mode: luminosity;
}

/* Wide Box view Me Mode */
body.wide-box-mode  .cu-dashboard-box__scroll_me-mode .cu-user-box {
    width: 100%;
    max-width: 100%;
    height: auto;
}
body.wide-box-mode  .cu-dashboard-box__scroll_me-mode  .cu-user-box__scroll {
    max-height: none;
}

body.wide-box-mode .cu-dashboard-box__scroll_me-mode .cu-workload-box {
    display: none;
}

/* Compact Status Groups in List View */
body.compact-status-group .cu-list-group .cu-task-list-footer {
    display: none;
}
body.compact-status-group .cu-list-group .cu-task-list:last-child .cu-task-list-footer {
    display: flex;
}
body.compact-status-group .cu-list-group .cu-task-list-header__item_main {
    padding-top: 0;
}
body.compact-status-group .cu-list-group .cu-task-list-header__items {
    margin-top: 0;
}
body.compact-status-group .cu-list-group .cu-task-list-header-settings .cu-dropdown .cu-task-list-header-settings__add {
    margin-top: 0;
}

/* Same Line Tags */
body.same-line-tags .cu-task-row-main__link-container { flex-direction: row; }


/* Better task tray close buttons */
body.better-tasktray-close cu-minimize-tasks-keeper .minimize-item:hover .minimize-item__remove {
    position: absolute;
    top: -15px;
    right: -3px;
    height: 20px;
    width: 20px;
    background: #fff;
    padding: 5px;
    border-radius: 50%;
    border: 1px solid #e9ebf0;
}
body.better-tasktray-close .minimize-item:hover .minimize-item__taskname::after {
    width: 12px;
}
body.better-tasktray-close cu-minimize-tasks-keeper .minimize-item:hover {
    overflow: visible;
}


/* Sticky Space heading in Modern layout */
body.modern-sticky-spaces .cu-manager2__container .cu2-sidebar__body_v5 .cu2-project-list-bar-item__container {
    position: sticky;
    top: 0;
    z-index: 2;
    background: #fff;
}
body.modern-sticky-spaces .layout-size_compact .nav-category__header {
  top: 34px;
}
body.modern-sticky-spaces .layout-size_default .nav-category__header {
  top: 38px;
}
body.modern-sticky-spaces .layout-size_large .nav-category__header {
  top: 42px;
}

/* for blurring tasks for screenshots */
/*.cu-task-row-main__link-inner {filter: blur(3px);}*/

